[package]
name = "quuga-be"
version = "0.1.0"
edition = "2021"
authors = ["Greatenishioka <20e1118@andrew.ac.jp>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
serde_json = "1.0.149"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
